# NAAb

./: .gitignore  .gitleaks.toml  .gitleaksignore  .gitmodules  .naabfmt.toml  BUG_3_FIX_SUMMARY.md  BUG_3_JAVASCRIPT_ARRAYS_FIX.md  CHANGELOG.md  CLAUDE-TEMPLATE.md  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CRITICAL_BUGS_REPORT_2026_01_25.md  DEVELOPER_GUIDE.md  Dockerfile.hermetic  FINAL_MONOLITH.naab  GETTING_STARTED.naab  INTEGRATION_SUCCESS.md  ISS024_COMPLETE_TEST.naab  KNOWN_ISSUES.md  MASTER_STATUS_UPDATE.md  NAAB_FINAL_EXECUTION_PLAN.md  NAAB_SYSTEM_MONITOR.naab  PHASE_1_ITEM_8_COMPLETE.md  QUICK_REFERENCE.naab  README.md  REBUILD_NOW.sh  RESERVED_KEYWORDS.md  SECURITY.md  STRUCT_IMPLEMENTATION_REPORT.md  STRUCT_MIGRATION_GUIDE.md  STRUCT_SIGN_OFF.md  TEST_RESULTS.md  TUTORIAL_POLYGLOT_BLOCKS.naab  USER_GUIDE.md  baseline_test_results.txt  blocks_config.txt  build-and-install.sh  build_and_install.sh  build_and_test_lsp.py  (+64 more)
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md  secret_scanning.yml
MASTER_STATUS/: ADD.md  INDEX.md  MASTER_STATUS.md  PRODUCTION_READINESS_PLAN (1).md  PRODUCTION_READINESS_PLAN.md  PRODUCTION_READINESS_PLAN_backup.md  README.md
benchmarks/: README.md  benchmark_utils.naab  run_all_benchmarks.sh  run_one.sh  test_array_append.naab  test_array_assignment.naab  test_array_length.naab  test_list_access.naab  test_list_length.naab  test_loop_list.naab  test_minimal.naab  test_minimal2.naab  test_vars.naab  test_vars_simple.naab  test_vars_small.naab  test_while.naab
blocks/json/: CMakeLists.txt  json_block.cpp
build-asan/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake
build-test/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  enrich_tool  naab-doc  test_block_registry  test_enhanced_metadata  test_library_detection  test_profiler  test_search_index
docs/: AI_ASSISTANT_GUIDE.md  AI_GUIDE.md  AI_POLYGLOT_GUIDANCE.md  API_CATALOG.md  API_REFERENCE.md  ARCHITECTURE.md  BLOCK_ASSEMBLY_COMMANDS.md  BLOCK_SYSTEM_QUICKSTART.md  BOUNDS_VALIDATION_AUDIT.md  BUGFIX_STDLIB_IMPORTS_2026_01_25.md  BUILD_FIX_2026_01_19_GC.md  BUILD_READY.md  BUILD_STATUS_PHASE_2_4_4.md  CHANGELOG.md  CHANGELOG_2026_01_25.md  CLAUDE-TEMPLATE.md  CLAUDE.md  COMPREHENSIVE_DESIGN_STATUS.md  CONTRIBUTING.md  COOKBOOK.md  DAY1_INTEGRATION_SUMMARY.md  DEBUG_HELPERS.md  DEVELOPER_GUIDE.md  EXECUTION_SUMMARY.md  FFI_SAFETY_STATUS.md  FINAL_BUILD_FIX.md  FINAL_TEST_INSTRUCTIONS.md  FIXES_APPLIED_2026_01_22.md  FIXES_SUMMARY.md  FIX_RECOMMENDATIONS.md  FORMATTER_GUIDE.md  HERMETIC_BUILDS.md  INCIDENT_RESPONSE.md  ISS-035_FIX_SUMMARY.md  ISS024_MODULE_TYPE_SYNTAX_FIX.md  ITEM_10_DAY_4_COMPLETE.md  LLM_BEST_PRACTICES.md  LSP_DEVELOPER_GUIDE.md  LSP_RELEASE_CHECKLIST.md  LSP_USER_GUIDE.md  (+86 more)
dpre_app/: cli_parser.naab  data_models.naab  engine.naab  ingestion.naab  processing.naab  reporting.naab  test_dpre.sh  test_utils.naab
examples/: all_three_languages.naab  anti_patterns.naab  api_server.naab  before_after_optimization.naab  config_manager.naab  cpp_math.naab  data_analyzer.naab  data_pipeline.naab  error_demo.naab  error_demo_simple.naab  feature_showcase.naab  fibonacci.naab  final_multi_language_demo.naab  govern_polyglot_example.json  hello_world.naab  js_utils.naab  math_utils.naab  multi_language_analytics.naab  polyglot.naab  polyglot_showcase.naab  python_eval_block.py  real_block_calls.naab  real_multi_language.naab  sales_report_generator.naab  simple_multi_language.naab  stack_trace_demo.naab  string_manipulator.naab  string_utils.naab  system_monitor.naab  test_block_calling.naab  test_block_loading.naab  test_block_params.naab  test_chaining_simple.naab  test_cpp_block.naab  test_cpp_exec.naab  test_direct_error.naab  test_function_return_inference.naab  test_function_return_inference_simple.naab  test_functions.naab  test_gc_out_of_scope.naab  (+30 more)
fuzz/: CMakeLists.txt  README.md  fuzz_interpreter.cpp  fuzz_json_marshal.cpp  fuzz_lexer.cpp  fuzz_parser.cpp  fuzz_python_executor.cpp  fuzz_value_conversion.cpp  run_fuzzers.sh
fuzz/corpus/: control_flow.naab  destructure.naab  expressions.naab  function.naab  hello.naab  imports.naab  polyglot.naab  struct_enum.naab  types.naab
fuzz/corpus/interpreter/: function.naab  main_block.naab  struct.naab
fuzz/corpus/lexer/: dict.naab
fuzz/corpus/parser/: control_flow.naab
fuzz/corpus/python/: math.py
fuzz/corpus_interpreter/: closure_bomb.naab  deep_nesting.naab  deep_recursion.naab  exception_storm.naab  gc_stress.naab  massive_array.naab  massive_dict.naab  pathological_match.naab  recursive_generator.naab  shadowing_storm.naab  string_explosion.naab  struct_nesting.naab
reports/: report_1769841090.0.csv  report_1769841090.0.html  report_1769844303.0.csv  report_1769844303.0.html
sbom/: naab-sbom.cdx.json  naab-sbom.spdx.json  naab-sbom.txt
scripts/: bump-version.sh  bump_version.sh  enrich_blocks.sh  generate-sbom.sh  hermetic-build.sh  promote.sh  quick_refactor.sh  refactor.py  refactor_module.py  refactor_stdlib_modules.sh  sign-artifacts.sh  test_enrich_50.sh  test_enrich_mixed.sh  test_security_modules.sh  verify-reproducibility.sh
src/: safe_regex.cpp
stdlib/: result.naab
templates/: MODULE_TEMPLATE.h  report.html
test_modules/: README.md  circular_a.naab  circular_b.naab  data_processor.naab  math_utils.naab  test_circular_dependency.naab  test_module_system.naab  test_nested_modules.naab  test_no_modules.naab  test_simple_module.naab
tests/: FIXES_SUMMARY.md  ISSUE_4_DOCUMENTATION_FIX.md  ISSUE_FIXES_2026_02_05.md  PARALLEL_EXECUTION_COMPLETE.md  PARALLEL_POLYGLOT_STATUS.md  SESSION_SUMMARY_2026_02_05.md  bug1_debug.naab  bugfix_verification.naab  example_api_server.cpp  nim_test.naab  polyglot_optimization_test.naab  test_async.naab  test_basic.naab  test_collections_set.naab  test_complete_type_system.naab  test_control_flow.naab  test_cpp_block_add.cpp  test_cross_language.cpp  test_cross_language_bridge.cpp  test_cross_language_performance.cpp  test_cross_language_simple.cpp  test_enhanced_errors.naab  test_error_messages.naab  test_hash  (+42 more)
(+1665 files in other folders)
